# parprog-2018-1

groups/1506-3/talamanov_ae/: CMakeLists.txt
groups/1506-3/talamanov_ae/1-test-version/: before_code.cpp
groups/1506-3/talamanov_ae/2-openmp/: omp_shellsort.hpp
